[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
ring = "0.17.8"
base64 = "0.22.1"
futures-util = "0.3.30"
uuid = { version = "1", features = ["v4"] }  